# marketmakerBot

./: .gitignore  README.md  create_substr.py  example_bot.py  pyproject.toml  substr_100.txt
.github/workflows/: ci_pytest.yaml
marketmaker/: actions.py  backend.py  bot.py  configs.py  db.py  initialization.py  start.py  subclass.py  used_menus.py
marketmaker/actions/: __init__.py  crossword.py  economy.py  fun.py  influxdb_queries.py  leaderboard.py  puzzle.py
marketmaker/backend/: bomb_party.py  crossword.py  db.py  futures.py  influxdb.py  letter_bowl.py  phrase_hangman.py
marketmaker/cmnds/: __init__.py  basic_events.py  bot_tasks.py  general.py  plots.py
scripts/: create_substr.py
static/: counts_substr.txt  icon.pdn  substr_250.txt
static/phrases/: 05-prepositional-phrases.txt  SOURCE
tests/: conftest.py  test_actions.py  test_backend.py  test_initialization.py  test_lib.py
