[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "marketmaker"
version = "0.1.0"
dependencies = [
    "python-dotenv", # token
    "discord.py",    # discord bot
    "nltk",          # word generation
    "pyenchant",     # spell checking
    "numpy",         # saving int lists
    "pytz",          # timezone
]
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
bot = "marketmaker.bot:run_bot"

[tool.setuptools]
packages = ["marketmaker", "scripts"]
